es uptime cal
